--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,38 @@
 plugins {
     id 'java'
+    id "io.qameta.allure" version "2.8.1"
 }
 
 group 'org.example'
 version '1.0-SNAPSHOT'
+
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
+}
+
+allure {
+    autoconfigure = true
+    aspectjweaver = true
+    version = '2.13.8'
+
+    useJUnit5 {
+        version = '2.13.8'
+    }
+}
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+    compile 'com.codeborne:selenide:5.20.4'
+
+    testImplementation ('org.junit.jupiter:junit-jupiter-api:5.6.0',
+            'io.qameta.allure:allure-selenide:2.13.8')
+
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
 }
 
 test {
